--- a/src/components/Style.css
+++ b/src/components/Style.css
@@ -9,8 +9,9 @@
     background-size: cover;
     padding: 10px;
     display: flex;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     border-radius: 10px;
+    margin-top: 20px;
 
 }
 .about-me{
@@ -18,7 +19,7 @@
     border-radius: 10px;
     padding: 20px;
     width: 100%;
-    transform: translate(-20%, 5%);
+    position: left;
 }
 
 .home-container{
@@ -35,6 +36,10 @@
     width: 100%;
     background-position: center;
     display: 100%;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    position: center;
+    border-radius: 10px;
 }
 
 .me{
@@ -52,6 +57,7 @@ width: 35%;
 .git{position:flex;
     width: 100%;
     text-align: center;
+    border-radius: 0px;
 }
 .LinkIn{
     position:flex;
@@ -72,4 +78,13 @@ width: 35%;
 }
 .CarouselImage{
     image-align: center;
+}
+
+.carousel{
+    image-align: center;
+    background-color:red;
+}
+
+.contactBackground{
+    background:url()
 }
